# latin-learning-api

./: README.md  setup.cfg
src/latin_api/api/: webapp.py
src/latin_api/api/routers/: __init__.py  chapter1_5.py  chapter6_10.py
src/latin_api/cli/: entrypoint.py
src/latin_api/models/: combiner.py  grammar.py  nouns.py  verbs.py
src/latin_api/vocabulary/: nouns_1d.py  verbs_1c.py
src/latin_learning_api.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_combiner.py  test_nouns.py  test_verbs.py
