[metadata]
name = latin_learning_api
author = Joe Mulhern
version = 0.0.1
description = API to help learn Latin 

[options]
python_requires = >= 3.8
packages = find:
package_dir =
    = src
include_package_data = true
install_requires = 
    fastapi == 0.73.0
    uvicorn[standard]

[options.extras_require]
test = 
    pytest
    pytest-cov
    jupyter

[options.packages.find]
where = src

[options.entry_points]
console_scripts = 
    latinapi = latin_api.cli.entrypoint:main